@@ -2,6 +2,7 @@
 
 #
 # Revelation 0.3.0 - a password manager for GNOME 2
+# $Id$
 # http://oss.wired-networks.net/revelation/
 #
 # Copyright (c) 2003-2004 Erik Grinaker
