@@ -2,6 +2,13 @@ Revelation changelog
 
 ---------------[ xxxx-xx-xx : 0.3.1 ]---------------
 
+2004-05-09  Erik Grinaker <erikg@codepoet.no>
+
+	* updated all references to the wired-networks.net domain
+	to point to the new codepoet.no domain
+
+	* added Id keyword to all code files
+
 2004-04-30  Erik Grinaker <erikg@codepoet.no>
 
 	* fixed a bug which caused the file selector to be opened
